2009-03-06  Peter Kasting  <pkasting@google.com>

        Reviewed by Sam Weinig.

        Convert some C-style casts to static_cast<>()s.

        * platform/gtk/WheelEventGtk.cpp:
        (WebCore::PlatformWheelEvent::PlatformWheelEvent):
        * platform/mac/WheelEventMac.mm:
        (WebCore::PlatformWheelEvent::PlatformWheelEvent):
        * platform/win/WheelEventWin.cpp:
        (WebCore::PlatformWheelEvent::PlatformWheelEvent):
        * platform/wx/MouseWheelEventWx.cpp:
        (WebCore::PlatformWheelEvent::PlatformWheelEvent):

2009-03-06  Adele Peterson  <adele@apple.com>

        Reviewed by Oliver Hunt.

        Fix for <rdar://problem/6607524> REGRESSION (Safari 3-4): I can't tab back to the URL field in an empty window (key loop is broken)

        I haven't been able to make a test for this since the problem is not reproducible within an empty iframe.

        * page/EventHandler.cpp: (WebCore::eventTargetNodeForDocument): We used to ensure that every html document had a body element.
          That is no longer true, so we should return the document element for a truly empty document.

2009-03-06  Jay Campan  <jcampan@google.com>

        Reviewed by Darin Fisher.

        https://bugs.webkit.org/show_bug.cgi?id=24306

        Adding a flag to ResourceRequestBase to indicate whether or not upload
        progress notifications are needed for a resource. This is useful to
        avoid sending these notifications when there are no consumers
        (especially in the Chromium case where IPC is involved). 

        * platform/network/ResourceRequestBase.h:
        (WebCore::ResourceRequestBase::reportUploadProgress):
        (WebCore::ResourceRequestBase::setReportUploadProgress):
        (WebCore::ResourceRequestBase::ResourceRequestBase):
        * xml/XMLHttpRequest.cpp:
        (WebCore::XMLHttpRequest::loadRequestAsynchronously):

2009-03-06  Dmitry Titov  <dimich@chromium.org>

        Reviewed by Alexey Proskuryakov.
